--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>3.2.4</version>
         </dependency>
-
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -53,13 +51,10 @@
 
 
         <dependency>
-            <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
-            <version>4.6.2</version>
-            <optional>true</optional>
-            <scope>test</scope>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.0</version>
         </dependency>
-
 
 
 
