--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,14 @@
             <scope>test</scope>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>de.flapdoodle.embed</groupId>-->
+<!--            <artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>-->
+<!--            <version>4.6.2</version>-->
+<!--            <optional>true</optional>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+
 
         <dependency>
             <groupId>org.modelmapper</groupId>
